src/main/resources/test-dc-wait.yml
kind: "DeploymentConfig"
apiVersion: "v1"
metadata:
  name: dc-waituntilready
spec:
  template:
    metadata:
      labels:
        name: "frontend"
    spec:
      containers:
        - name: "helloworld"
          image: "openshift/hello-openshift:latest"
          ports:
            - containerPort: 8080
              protocol: "TCP"
  replicas: 1
  selector:
    name: "frontend"
  triggers:
    - type: ConfigChange
