src/main/resources/test-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
spec:
  host: www.example.com
  path: "/test"
  to:
    kind: Service
    name: frontend
